<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bill</string>

    <!-- Toolbar labels -->
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="placeholder_selected_items">%d selected items</string>

    <!-- Toolbar actions -->
    <string name="delete">Delete</string>

    <!-- Onboarding -->
    <string name="welcome">Welcome to %s!</string>
    <string name="question_salary">What\'s your salary?</string>

    <!-- Wallet -->
    <string name="placeholder_price">%s %s</string>

    <!-- WalletModifier -->
    <string name="add_quantity">Add quantity</string>
    <string name="new_wallet">New wallet</string>
    <string name="label_add_quantity_icon">Dollar symbol icon</string>
    <string name="dialog_add_quantity_message">Quantity to be added to the balance of your %s wallet.</string>
    <string name="dialog_add_quantity_field_hint">Quantity</string>

    <!-- BalanceInfluence -->
    <string name="registration_date_standard">Registered on %s</string>
    <string name="registration_date_extended">Registered on %s, %d:%d</string>
    <string name="cost">Cost</string>
    <string name="amount">Amount</string>
    <string name="label_balance_influence_icon">Balance influence icon</string>

    <!-- BalanceInfluenceComposer -->
    <string name="new_acquisition">New acquisition</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="category">Category</string>
    <string name="dialog_title_expensive_acquisition">Expensive acquisition</string>
    <string name="dialog_message_expensive_acquisition">This acquisition is expensive for your %s wallet. Are you sure you want to
        register?</string>

    <!-- Preferences -->
    <string name="salary">Salary</string>
    <string name="change_currency">Change currency</string>
    <string name="change_value">Change value</string>
    <string name="summary_change_value">Value to be updated monthly.</string>
    <string name="renew_date">Renew date</string>
</resources>